@@ -1,6 +1,9 @@
 v3.4.0-rc.4 (XXXX-XX-XX)
 ------------------------
 
+* added option `--rocksdb.total-write-buffer-size` to limit total memory usage
+  across all RocksDB in-memory write buffers
+
 * suppress warnings from statistics background threads such as 
   `WARNING caught exception during statistics processing: Expecting Object`
   during version upgrade
